# tg_assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hello.cpp  hello.pl  messageSimulator.pl  spamEngine.pl
DB/: classification.txt  messages.txt
Modulo/: spamModule.pm
src/: main.cpp  spamModule.pm  spam_classifier.pl
